--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -2617,7 +2617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -2626,7 +2626,7 @@
        "(6716, 35)"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2651,11 +2651,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "property_types = pd.unique(data_test[type_columns].dropna().values.ravel('K'))\n",
+    "for ptype in property_types:\n",
+    "    print(ptype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hotel\n",
+      "Library\n",
+      "Fitness Center/Health Club/Gym\n",
+      "Social/Meeting Hall\n",
+      "Office\n",
+      "Self-Storage Facility\n",
+      "Retail Store\n",
+      "Other - Entertainment/Public Assembly\n",
+      "Medical Office\n",
+      "Other - Lodging/Residential\n",
+      "Financial Office\n",
+      "Non-Refrigerated Warehouse\n",
+      "Distribution Center\n",
+      "Parking\n",
+      "Multifamily Housing\n",
+      "Senior Care Community\n",
+      "Residence Hall/Dormitory\n",
+      "Other\n",
+      "Laboratory\n",
+      "Refrigerated Warehouse\n",
+      "Other - Recreation\n",
+      "Other - Mall\n",
+      "Supermarket/Grocery Store\n",
+      "Restaurant\n",
+      "Other - Restaurant/Bar\n",
+      "Repair Services (Vehicle, Shoe, Locksmith, etc)\n",
+      "Strip Mall\n",
+      "Worship Facility\n",
+      "Other - Utility\n",
+      "Other - Education\n",
+      "Museum\n",
+      "Performing Arts\n",
+      "K-12 School\n",
+      "Vocational School\n",
+      "Data Center\n",
+      "Other - Services\n",
+      "Movie Theater\n",
+      "Convenience Store without Gas Station\n",
+      "College/University\n",
+      "Adult Education\n",
+      "Bar/Nightclub\n",
+      "Food Service\n",
+      "Bank Branch\n",
+      "Food Sales\n",
+      "Manufacturing/Industrial Plant\n",
+      "Hospital (General Medical & Surgical)\n",
+      "Other - Public Services\n",
+      "Swimming Pool\n",
+      "Pre-school/Daycare\n",
+      "Personal Services (Health/Beauty, Dry Cleaning, etc)\n",
+      "Other - Technology/Science\n",
+      "Fast Food Restaurant\n",
+      "Other/Specialty Hospital\n",
+      "Enclosed Mall\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -3078,39 +3149,21 @@
        "[6716 rows x 97 columns]"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "types_columns = [\"LargestPropertyUseType\", \"SecondLargestPropertyUseType\", \"ThirdLargestPropertyUseType\"]\n",
-    "property_types = pd.unique(data_test[type_columns].dropna().values.ravel('K'))\n",
-    "\n",
-    "df = data_test\n",
-    "for ptype in property_types:\n",
-    "    for value in data_test[\"LargestPropertyUseType\"]:\n",
-    "        if value == ptype:\n",
-    "            \n",
-    "            break\n",
-    "\n",
-    "one_hot = pd.get_dummies(data_test, prefix=\"PType\", columns=types_columns)\n",
+    "one_hot = pd.get_dummies(data_test, prefix=\"PType\", columns=types_columns, sparse=True)\n",
     "one_hot = one_hot.groupby(level=0, axis=1).sum()\n",
-    "one_hot[[\"OSEBuildingID\",\"PType_Hotel\", \"LargestPropertyUseTypeGFA\", \"SecondLargestPropertyUseTypeGFA\", \"ThirdLargestPropertyUseTypeGFA\"]][one_hot[\"PType_Hotel\"] == 1]\n",
-    "# data_test[['PropertyGFATotal', types_columns[0], 'LargestPropertyUseTypeGFA', types_columns[1], 'SecondLargestPropertyUseTypeGFA', types_columns[2], 'ThirdLargestPropertyUseTypeGFA']]\n",
-    "# for column in types_columns:\n",
-    "#     data_test[column + 'GFA'][data_test[column + 'GFA'].isna()] = 0\n",
-    "# for ptype in property_types:\n",
-    "#     for column in types_columns:\n",
-    "#         print(column)\n",
-    "#         data_test[\"PType_\"+ ptype]\n",
-    "#         data_test[column][data_test[column] == ptype]\n",
-    "# data_test[['PropertyGFATotal', types_columns[0], 'LargestPropertyUseTypeGFA', types_columns[1], 'SecondLargestPropertyUseTypeGFA', types_columns[2], 'ThirdLargestPropertyUseTypeGFA']]"
+    "one_hot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -3265,7 +3318,7 @@
        "[154 rows x 5 columns]"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
