--- a/Model.ipynb
+++ b/Model.ipynb
@@ -298,19 +298,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def scatter_plot(x, y, size, hue):\n",
-    "    plt.figure(figsize=(10, 10))\n",
-    "    sns.scatterplot(x=train_score.index, y=\"Training_R2\", data=train_score, s=1000, hue=\"Training_R2\")\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "seed = 42\n",
     "\n",
     "linear = LinearRegression(n_jobs=-1)\n",
@@ -320,6 +307,18 @@
     "svm_linear = SVR(kernel=\"linear\")\n",
     "svm_rbf = SVR(kernel=\"rbf\")\n",
     "rfr = RandomForestRegressor(n_jobs=-1, random_state=seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = data.copy()\n",
+    "\n",
+    "imputer = SimpleImputer()\n",
+    "df = pd.DataFrame(imputer.fit_transform(df), columns=df.columns)"
    ]
   },
   {
@@ -335,10 +334,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = data.copy()\n",
-    "\n",
-    "imputer = SimpleImputer()\n",
-    "df = pd.DataFrame(imputer.fit_transform(df), columns=df.columns)"
+    "X = df.drop([\"TotalGHGEmissions\", \"SiteEnergyUseWN(kBtu)\", \"ENERGYSTARScore\"], axis=1)\n",
+    "y = df[[\"TotalGHGEmissions\"]]"
    ]
   },
   {
@@ -347,22 +344,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = df.drop([\"TotalGHGEmissions\", \"SiteEnergyUseWN(kBtu)\", \"ENERGYSTARScore\"], axis=1)\n",
-    "y = df[[\"TotalGHGEmissions\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -433,49 +420,49 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>LinearRegression</td>\n",
-       "      <td>1.913251e+06</td>\n",
-       "      <td>0.83744</td>\n",
+       "      <td>74.22998</td>\n",
+       "      <td>0.64796</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Lasso</td>\n",
-       "      <td>1.913298e+06</td>\n",
-       "      <td>0.83744</td>\n",
+       "      <td>74.27277</td>\n",
+       "      <td>0.64755</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Ridge</td>\n",
-       "      <td>1.913507e+06</td>\n",
-       "      <td>0.83740</td>\n",
+       "      <td>74.25448</td>\n",
+       "      <td>0.64773</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>SVM Linear</td>\n",
-       "      <td>5.035334e+06</td>\n",
-       "      <td>-0.12595</td>\n",
+       "      <td>77.42409</td>\n",
+       "      <td>0.61701</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>SVM RBF</td>\n",
-       "      <td>5.047284e+06</td>\n",
-       "      <td>-0.13130</td>\n",
+       "      <td>109.03902</td>\n",
+       "      <td>0.24038</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>RandomForestRegressor</td>\n",
-       "      <td>1.153374e+06</td>\n",
-       "      <td>0.94093</td>\n",
+       "      <td>38.18362</td>\n",
+       "      <td>0.90685</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                               RMSE  R2 Score\n",
-       "LinearRegression       1.913251e+06   0.83744\n",
-       "Lasso                  1.913298e+06   0.83744\n",
-       "Ridge                  1.913507e+06   0.83740\n",
-       "SVM Linear             5.035334e+06  -0.12595\n",
-       "SVM RBF                5.047284e+06  -0.13130\n",
-       "RandomForestRegressor  1.153374e+06   0.94093"
+       "                            RMSE  R2 Score\n",
+       "LinearRegression        74.22998   0.64796\n",
+       "Lasso                   74.27277   0.64755\n",
+       "Ridge                   74.25448   0.64773\n",
+       "SVM Linear              77.42409   0.61701\n",
+       "SVM RBF                109.03902   0.24038\n",
+       "RandomForestRegressor   38.18362   0.90685"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -536,8 +523,8 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:   24.1s\n",
-      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:  1.7min\n"
+      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:   30.9s\n",
+      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:  2.2min\n"
      ]
     },
     {
@@ -551,7 +538,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Done 240 out of 240 | elapsed:  1.8min finished\n"
+      "[Parallel(n_jobs=-1)]: Done 240 out of 240 | elapsed:  2.4min finished\n"
      ]
     }
    ],
@@ -568,16 +555,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 10 folds for each of 15 candidates, totalling 150 fits\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -589,6 +569,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Fitting 10 folds for each of 15 candidates, totalling 150 fits\n",
       "Ridge best params: {'alpha': 9.8, 'random_state': 42} & best_score: 80.78596\n"
      ]
     },
@@ -596,7 +577,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Done 150 out of 150 | elapsed:    2.2s finished\n"
+      "[Parallel(n_jobs=-1)]: Done 150 out of 150 | elapsed:    4.0s finished\n"
      ]
     }
    ],
@@ -610,30 +591,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Fitting 10 folds for each of 8 candidates, totalling 80 fits\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:  1.6min\n",
-      "[Parallel(n_jobs=-1)]: Done  80 out of  80 | elapsed:  2.8min finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SVM best params: {'C': 5, 'gamma': 0.0001, 'kernel': 'linear'} & best_score: 80.41907\n"
      ]
     }
    ],
